<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".oneGamerActivity">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/editbox_background"
        android:layout_marginEnd="33dp"
        android:text="  level"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/atempt"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="410dp"
        android:text="@string/atempts"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/interval1"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="331dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="[12-16]"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="256dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/share"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/im"
        android:enabled="false"
        android:text="@string/share_score"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/level" />

    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="171dp"
        android:background="@drawable/im"
        android:text="@string/validate"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/score"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="@string/score" />

    <TextView
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textAlignment="center" />

</RelativeLayout>