<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/kest"
    tools:context=".two_gamersActivity">

    <TextView
        android:id="@+id/state2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/te"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="" />


    <Button
        android:id="@+id/btnv2"
        android:layout_width="196dp"
        android:layout_height="58dp"
        android:enabled="false"
        android:background="@drawable/bt12"
        android:textColor="@color/colorPrimaryDark"
        android:text="VALIDATE" />

    <EditText
        android:id="@+id/nb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelG2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/inter"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/colorAccent"
        android:text="[18-30]"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelG1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnv1"
        android:layout_width="179dp"
        android:layout_height="58dp"
        android:enabled="false"
        android:background="@drawable/bt12"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/labelValidate" />

    <TextView
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/state1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />


</LinearLayout>